[gd_scene load_steps=7 format=3 uid="uid://c88emyaqb8i1o"]

[ext_resource type="Script" path="res://creatures/creature.gd" id="1_i3p8u"]
[ext_resource type="Resource" uid="uid://uv8qy6cdvk4b" path="res://creatures/footman_stats.tres" id="2_2sbf0"]
[ext_resource type="Texture2D" uid="uid://bs3xxoeb4j5ol" path="res://assets/placeholder/sprites/characters/player.png" id="3_dgooi"]
[ext_resource type="PackedScene" uid="uid://ejgsk65v3pvj" path="res://ui/value_bar.tscn" id="4_4o7xg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5wtq7"]
radius = 3.53553

[sub_resource type="CircleShape2D" id="CircleShape2D_uh4bn"]
radius = 23.0217

[node name="Creature" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, 1)
script = ExtResource("1_i3p8u")
stats = ExtResource("2_2sbf0")
enemy_layer = 4
friendly_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_dgooi")
offset = Vector2(0.5, 0)
hframes = 6
vframes = 10
frame = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.5)
shape = SubResource("CircleShape2D_5wtq7")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_uh4bn")

[node name="AttackTimer" type="Timer" parent="."]

[node name="ValueBar" parent="." instance=ExtResource("4_4o7xg")]
offset_left = -16.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = -19.0
metadata/_edit_use_anchors_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
neighbor_distance = 100.0
max_neighbors = 4
max_speed = 110.0

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_enemy_detector_area_entered"]
[connection signal="area_exited" from="EnemyDetector" to="." method="_on_enemy_detector_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
